--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Manage landing page</title>
-
+  <script src="/script.js" defer></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -28,10 +31,18 @@
         <li><a href="">Community</a></li>
       </ul>
     </nav>
+    <div class="hamburger-menu">
+      <div class="hamburger">
+        <img src="/images/icon-hamburger.svg" alt="hamburger">
+      </div>
+      <div class="close">
+        <img src="/images/icon-close.svg" alt="close">
+      </div>
+    </div>
   </header>
 
   <section class="top">
-    <div class="avatar">
+    <div class="illustration">
       <img src="/images/illustration-intro.svg" alt="intro-illustration">
     </div>
     <div class="text">
